fix: 소나큐브 분석결과 수정반영 LocalDate.now() -> LocalDate.now(APP_ZONE), APP_ZONE = ZoneId.of("Asia/Seoul") : UserServiceImpl과 동일한 코드 사용하도록 변경
.collect(Collectors.toList()) -> .toList()
:반환된 리스트가 불변이므로 Stream.toList() 사용이 안전함